# Pix4D-MCP

./: .gitignore  PIX4D_MCP_기획서.md  README.md  pyproject.toml  requirements.txt  setup.cfg
docs/: troubleshooting.md  ui_selectors.md
examples/: batch.example.json  job.example.json  mcp_config.example.json  pix4dmatic_mcp_config.example.json
scripts/: inspect_ui.py  run_server.ps1  test_status.py
src/pix4dmatic_mcp/: __init__.py  config.py  controller.py  errors.py  logs.py  screenshots.py  selectors.py  server.py  workflows.py
