[metadata]
name = pix4dmatic-mcp
version = 0.1.0
description = Local MCP server for controlling PIX4Dmatic through Windows GUI automation.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    mcp>=1.2.0
    pillow>=10.0.0
    psutil>=5.9.0
    pydantic>=2.0.0
    pywinauto>=0.6.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pix4dmatic-mcp = pix4dmatic_mcp.server:main
